# picocode

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  picocode.scan-skills.yaml  picocode.yaml.example
.github/workflows/: ci.yml  release.yml
design/: IMPLEMENTATION_SUMMARY.md  MULTILINE_INPUT_SUMMARY.md  PLAN_MODE.md
examples/: basic_usage.rs  library_usage.rs
src/: agent.rs  config.rs  input.rs  lib.rs  main.rs  output.rs  persona.rs  tools.rs
