[package]
name = "picocode"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = { version = "0.28.0", features = ["derive"] }
rig-derive = "0.1.10"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "2.0.17"
indicatif = "0.18.3"
regex = "1.0"
schemars = "1.2.0"
ignore = "0.4.25"
globset = "0.4.18"
tracing = "0.1.44"
console = "0.16.2"
termimad = "0.34.1"
duct = "1.1.1"
duct_sh = "1.0.0"
async-trait = "0.1"

[lib]
name = "picocode"
path = "src/lib.rs"

[[bin]]
name = "picocode"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.24.0"
